src/main/java/com/example/fas/exceptions/user/error/HadUserDeteleException.java
package com.example.fas.exceptions.user.error;

public class HadUserDeteleException extends RuntimeException {
    public HadUserDeteleException(String message) {
        super(message);
    }
    
}
